fixed overflowing answer text
also making a new selection clears the answer and pictogram

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ button {
 }
 
 #output {
-	font-size: 100;
-	text-align: center;	
+	font-size: 100px;
+	text-align: center;
 }
 
 #outputWords {
